--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Le-livre-des-lotus-entr-ouverts_74003
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74003-h/images/cover.jpg
 creator:
   author:
     agent_name: Magre, Maurice
@@ -11,6 +14,8 @@ creator:
     - https://en.wikipedia.org/wiki/Maurice_Magre
     - https://fr.wikipedia.org/wiki/Maurice_Magre
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74003#Le-livre-des-lotus-entr-ouverts
 gutenberg_issued: '2024-07-10'
 gutenberg_type: Text
 identifiers:
